--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,12 @@
   <link rel="stylesheet" href="./style.css">
   <script defer src="./app.js"></script>
 </head>
+
 <body>
-  <h1>click me!</h1>
+  <div id="login-form">
+    <input type="text" placeholder="what is your name?" />
+    <button>Log In</button>
+  </div>
 </body>
+
 </html>
