--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-  <div id="login-form">
-    <input type="text" placeholder="what is your name?" />
-    <button>Log In</button>
-  </div>
+  <form id="login-form">
+    <input type="text" placeholder="what is your name?" required maxlength="15" />
+    <input type="submit" value="Log In" />
+  </form>
 </body>
 
 </html>
