--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
   <form id="login-form">
-    <input type="text" placeholder="what is your name?" required maxlength="15" />
-    <input type="submit" value="Log In" />
+    <a href="https://nomadcoders.co">Go to courses</a>
   </form>
 </body>
 
