--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <body>
   <form id="login-form">
-    <a href="https://nomadcoders.co">Go to courses</a>
+    <input type="text" placeholder="what is your name?" required maxlength="15" />
+    <input type="submit" value="Log In" />
   </form>
+  <h1 id="greeting" class="hidden"></h1>
 </body>
 
 </html>
