--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <form id="login-form">
+  <form id="login-form" class="hidden">
     <input type="text" placeholder="what is your name?" required maxlength="15" />
     <input type="submit" value="Log In" />
   </form>
