--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <input type="text" placeholder="what is your name?" required maxlength="15" />
     <input type="submit" value="Log In" />
   </form>
+  <h2 id="clock"></h2>
   <h1 id="greeting" class="hidden"></h1>
 </body>
 
