--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/greetings.js"></script>
   <script defer src="./js/clock.js"></script>
+  <script defer src="./js/quotes.js"></script>
 </head>
 
 <body>
@@ -18,6 +19,10 @@
   </form>
   <h2 id="clock"></h2>
   <h1 id="greeting" class="hidden"></h1>
+  <div id="quote">
+    <span></span><br />
+    <span></span>
+  </div>
 </body>
 
 </html>
