--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
   <script defer src="./js/clock.js"></script>
   <script defer src="./js/quotes.js"></script>
   <script defer src="./js/background.js"></script>
+  <script defer src="./js/todo.js"></script>
 </head>
 
 <body>
+  <h2 id="clock"></h2>
   <form id="login-form" class="hidden">
     <input type="text" placeholder="what is your name?" required maxlength="15" />
     <input type="submit" value="Log In" />
   </form>
-  <h2 id="clock"></h2>
   <h1 id="greeting" class="hidden"></h1>
+  <form id="todo-form">
+    <input type="text" placeholder="Write a To Do and Press Enter" required />
+  </form>
+  <ul id="todo-list"></ul>
   <div id="quote">
     <span></span><br />
     <span></span>
