--- a/index.html
+++ b/index.html
@@ -5,31 +5,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Momentum App</title>
+  <title>Momentom</title>
+  <!-- 웹폰트 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/greetings.js"></script>
   <script defer src="./js/clock.js"></script>
   <script defer src="./js/quotes.js"></script>
   <script defer src="./js/background.js"></script>
   <script defer src="./js/todo.js"></script>
-  <script defer src="./js/weather.js"></script>
+  <!-- <script defer src="./js/weather.js"></script> -->
 </head>
 
 <body>
-  <h2 id="clock"></h2>
-  <form id="login-form" class="hidden">
-    <input type="text" placeholder="what is your name?" required maxlength="15" />
-    <input type="submit" value="Log In" />
-  </form>
-  <h1 id="greeting" class="hidden"></h1>
-  <form id="todo-form">
-    <input type="text" placeholder="Write a To Do and Press Enter" required />
-  </form>
-  <ul id="todo-list"></ul>
-  <div id="quote">
-    <span></span><br />
-    <span></span>
-  </div>
+  <section id="wrap">
+    <h2 id="clock"></h2>
+
+    <div class="login">
+      <form id="login-form" class="hidden">
+        <input type="text" placeholder="what is your name?" required maxlength="15" />
+        <input type="submit" value="Log In"/>
+      </form>
+      <h1 id="greeting" class="hidden"></h1>
+    </div>
+
+    <div class="list">
+      <form id="todo-form">
+        <input type="text" placeholder="Write a To Do here" required />
+      </form>
+      <ul id="todo-list"></ul>
+    </div>
+
+    <div id="quote">
+      <span></span>&nbsp;
+      <span></span>
+    </div>
+
+  </section>
 </body>
 
 </html>
