--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Momentom</title>
+  <title>Momentum</title>
   <!-- 웹폰트 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
   
+  <link rel="icon" href="./img/favicon.png">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/greetings.js"></script>
   <script defer src="./js/clock.js"></script>
   <script defer src="./js/quotes.js"></script>
   <script defer src="./js/background.js"></script>
   <script defer src="./js/todo.js"></script>
-  <!-- <script defer src="./js/weather.js"></script> -->
+  <script defer src="./js/weather.js"></script>
 </head>
 
 <body>
@@ -43,7 +44,10 @@
       <span></span>&nbsp;
       <span></span>
     </div>
-
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
   </section>
 </body>
 
