--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
       <span></span>
     </div>
     <div id="weather">
-      <span></span>
-      <span></span>
+      <span class="temp"></span>
+      <span class="weather"></span><br />
+      <span class="city"></span>
     </div>
   </section>
 </body>
