--- a/alone/index.html
+++ b/alone/index.html
@@ -5,8 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Momentum</title>
+  <link rel="icon" href="./img/favicon.png">
+  <link rel="stylesheet" href="./css/style.css">
+  <script defer src="./js/greetings.js"></script> 
+  <script defer src="./js/clock.js"></script> 
+  <script defer src="./js/background.js"></script>
+  <script defer src="./js/quote.js"></script>
+  <script defer src="./js/todo.js"></script>
 </head>
 <body>
-  
+  <section id="main">
+    <div class="clock">
+      <h2></h2>
+    </div>
+    <div class="login">
+    <form id="login__form" class="hidden">
+      <input type="text" placeholder="what is your name?" max-length ="15" required/>
+      <input type="submit" class="login__btn" value="Login" />
+    </form>
+      <h1 class="username" class="hidden"></h1>
+    </div>
+    <div class="quote">
+      <span></span>
+      <span></span>
+    </div>
+  </section>
 </body>
 </html>
