--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="login">
       <form id="login-form" class="hidden">
         <input type="text" placeholder="what is your name?" required maxlength="15" />
-        <input type="submit" value="Log In"/>
+        <!-- <input type="submit" value="Log In"/> -->
       </form>
       <h1 id="greeting" class="hidden"></h1>
     </div>
