--- a/alone/index.html
+++ b/alone/index.html
@@ -12,6 +12,7 @@
   <script defer src="./js/background.js"></script>
   <script defer src="./js/quotes.js"></script>
   <script defer src="./js/todo.js"></script>
+  <script defer src="./js/weather.js"></script>
 </head>
 <body>
   <section id="main">
@@ -33,6 +34,10 @@
     <div class="quotes">
       <span class="quote"></span>
       <span class="author"></span>
+    </div>
+    <div class="weather">
+      <span class="temperature"></span>
+      <span class="city"></span>
     </div>
   </section>
 </body>
