--- a/alone/index.html
+++ b/alone/index.html
@@ -20,7 +20,7 @@
       <h2></h2>
     </div>
     <div class="login">
-      <form id="login__form">
+      <form id="login__form" class="hidden">
         <input type="text" placeholder="what is your name?" maxlength="15" required />
       </form>
       <h1 class="username hidden"></h1>
